--- a/train.ipynb
+++ b/train.ipynb
@@ -5,7 +5,9 @@
             "execution_count": 1,
             "source": [
                 "import torch\r\n",
-                "from data import XrayImageDataset"
+                "from torchvision import transforms\r\n",
+                "torch.manual_seed(17)\r\n",
+                "from data import XrayImageDataset, CustomLoader"
             ],
             "outputs": [],
             "metadata": {}
@@ -17,7 +19,10 @@
                 "# Parameters\r\n",
                 "params = {'batch_size': 1,\r\n",
                 "          'shuffle': True,\r\n",
-                "          'num_workers': 6}"
+                "          'num_workers': 6}\r\n",
+                "\r\n",
+                "transform_dict = { 'train': transforms.Compose( [transforms.ToTensor(),]),\r\n",
+                "        'test': transforms.Compose([transforms.ToTensor() ])}\r\n"
             ],
             "outputs": [],
             "metadata": {}
@@ -35,8 +40,8 @@
             "cell_type": "code",
             "execution_count": 4,
             "source": [
-                "training_set = XrayImageDataset(data_path)\r\n",
-                "training_generator = torch.utils.data.DataLoader(training_set, **params)"
+                "training_set = XrayImageDataset(data_path, transform = transform_dict['train'])\r\n",
+                "training_generator = CustomLoader(training_set, batch_size=8)"
             ],
             "outputs": [],
             "metadata": {}
@@ -44,26 +49,6 @@
         {
             "cell_type": "code",
             "execution_count": 5,
-            "source": [
-                "len(training_generator)"
-            ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "1"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 5
-                }
-            ],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 6,
             "source": [
                 "for batch in training_generator:\r\n",
                 "    print(batch.shape)"
@@ -73,7 +58,14 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "torch.Size([1, 120, 128, 128, 3])\n"
+                        "(25, 128, 128)\n",
+                        "torch.Size([128, 25, 128])\n",
+                        "(25, 128, 128)\n",
+                        "torch.Size([25, 128, 128])\n",
+                        "torch.Size([8, 128, 128])\n",
+                        "torch.Size([8, 128, 128])\n",
+                        "torch.Size([8, 128, 128])\n",
+                        "torch.Size([1, 128, 128])\n"
                     ]
                 }
             ],
